# bookshop_backend

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile~  README.md  commands.txt  docker-compose.yml  docker-compose.yml~  k.json  main.py  main.py~  pyproject.toml  requirements.txt  requirements.txt~  test_connection.py~
app/: .env  alembic.ini~  main.py  main.py~  t.json  test.txt
app/migrations/: env.py  env.py~
app/migrations/versions/: f4d58e4a8787_initial_migration.py
app/src/config/: config.py  config.py~
app/src/database/: connect.py  db.py
app/src/entity/: add_fake_data.py  add_fake_data.py~  book_names.py  enums.py  models.py  models.py~
app/src/repository/: books.py  books.py~  books_filter.py~  comments.py  review.py  users.py  users.py~
app/src/routes/: auth.py  auth.py~  books.py  books.py~  comments.py  review.py
migrations/: env.py  env.py~
migrations/versions/: 278e830d254c_initial_create_tables_books_users_.py  658ea29ec6d8_initial_migration.py  68c5f4c9c364_add_gender_field_to_user_table.py  6f93487676ef_add_login_method_field_to_user_table.py  7475ff7932ab_initial_migration__user_book_comment.py  7760af120476_create_books_and_comments_tables.py  89ac36d61020_initial_create_tables_books_users_.py  dff46636f70a_fix_table_book.py  efe0637ad1de_create_books_and_comments_tables.py  f9691c169278_add_test_migration.py
src/database/: connect.py  db.py
src/entity/: models.py
src/repository/: books.py  books.py~
src/routes/: books.py  books.py~  comments.py
src/schemas/: books.py  books.py~  comments.py
(+7 files in other folders)
