[project]
name = "bookshop-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Vitaliy Snezhkin",email = "vpsnejok@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
